# paper-derived

./: .gitignore  README.md  paper-derived.spec  pyproject.toml
cli/paper_derived/: __init__.py  cli.py  format_reader.py  format_writer.py  llm.py  runner.py  session_store.py  storage.py
cli/paper_derived/engine/: __init__.py  _paths.py  _tokens.py  context_assembler.py  doc_ops.py  generator.py  input_asset.py  session_engine.py  template.py  validator.py
cli/paper_derived/mcp/: server.py
cli/paper_derived/models/: __init__.py  context.py  document.py  extraction.py  input_asset.py  reports.py  session.py  template.py
cli/paper_derived/prompts/: batch.md  ctx_feed.md  ctx_summarize.md  extract.md  generate.md  preflight.md  register_input.md  register_template.md  revise.md  section_generate.md  validate.md
cli/paper_derived/prompts/compact/: batch.md  ctx_feed.md  ctx_summarize.md  extract.md  generate.md  preflight.md  register_input.md  register_template.md  revise.md  section_generate.md  validate.md
docs/superpowers/plans/: 2026-06-10-cli-skill-separation.md
docs/superpowers/specs/: 2026-06-10-cli-skill-separation-design.md
scripts/: build-cli.sh
skill/: SKILL-lite.md  SKILL.md  install.sh
skill/examples/: api-design-workflow.md
skill/references/: commands.md  data-models.md  offline-mode.md  session-states.md
skill/workflows/: generate.md  register.md  revise.md  session.md
tests/: test_engine.py  test_models.py  test_storage.py
