[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-derived"
version = "0.2.0"  # 与 cli/paper_derived/__init__.py 的 __version__ 保持一致
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.0.0",
    "pypdf>=4.0.0",
    "xlrd>=2.0.0",
    "python-pptx>=1.0.0",
    "fpdf2>=2.0.0",
    "pypandoc-binary>=1.13",
    "tiktoken>=0.7.0",
]

[project.scripts]
paper-derived = "paper_derived.cli:main"

[tool.setuptools.packages.find]
where = ["cli"]
include = ["paper_derived", "paper_derived.*"]

[tool.setuptools.package-data]
paper_derived = ["prompts/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
